--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,9 @@ dependencies {
     compile project(':jokeactivity')
 
     freeCompile 'com.google.android.gms:play-services-ads:9.8.0'
-    testCompile 'junit:junit:4.12'
+
+
+    //androidTestCompile 'com.android.support:support-annotations:24.0.0'
+    //androidTestCompile 'com.android.support.test:runner:0.5'
+
 }
